k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raj-app
spec:
  selector:
    matchLabels:
      run: raj-app
  replicas: 3
  template:
    metadata:
      labels:
        run: raj-app
        app: raj-app
    spec:
      containers:
      - name: raj-app
        image: task1a_app:latest
        ports:
        - containerPort: 8080
